--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -687,6 +687,28 @@ h1, h2, h3, h4, h5, h6 {
     
 }
 
+#hero .animated {
+  animation: up-down 2.75s ease-in-out infinite alternate-reverse both;
+}
+
+@-webkit-keyframes up-down {
+  0% {
+    transform: translateY(10px);
+  }
+  100% {
+    transform: translateY(-10px);
+  }
+}
+
+@keyframes up-down {
+  0% {
+    transform: translateY(10px);
+  }
+  100% {
+    transform: translateY(-10px);
+  }
+}
+
 @media (max-width: 991px) {
   #hero .hero-img {
     width: 80%;
@@ -694,6 +716,8 @@ h1, h2, h3, h4, h5, h6 {
     margin: 0 auto 25px auto;
   }
 }
+
+
 
 #hero .hero-info {
   width: 50%;
@@ -767,6 +791,24 @@ h1, h2, h3, h4, h5, h6 {
   background: #007bff;
   border-color: #007bff;
   color: #fff;
+}
+
+@-webkit-keyframes up-down {
+  0% {
+    transform: translateY(10px);
+  }
+  100% {
+    transform: translateY(-10px);
+  }
+}
+
+@keyframes up-down {
+  0% {
+    transform: translateY(10px);
+  }
+  100% {
+    transform: translateY(-10px);
+  }
 }
 
 .hero-waves {
