--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -160,8 +160,8 @@ h1, h2, h3, h4, h5, h6 {
 
 #header .logo img {
   padding: 0;
-  margin: 7px 0;
-  max-height: 26px;
+/*  margin: 7px 0;*/
+  max-height: 46px;
 }
 
 /*--------------------------------------------------------------
